<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TCGHelper</string>
    <string name="text_entrance_label">Login:</string>
    <string name="text_hint">Login</string>
    <string name="show_gallery">Show cards gallery</string>
    <string name="show_list_button">Show list</string>
    <string name="descr_image">Image</string>
    <string name="passwordLabel">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonTitle">Login</string>
    <string name="welcomeLabelTitle">Welcome to TCG helper!</string>
    <string name="tcgImage">TCGImage</string>
    <string name="imageStub">Image #</string>
    <string name="menu_next_item_title">>></string>
    <string name="menu_prev_item_title"><![CDATA[<<]]></string>
    <string name="show_cards_list">Show cards list</string>
    <string name="cardNameLabelStubText">Name</string>
    <string name="cardTypeLabelStubText">Type</string>
    <string name="cardTypeLabelCostStubText">Cost</string>
    <string name="cardNumberLabelStubText">Number</string>
    <string name="cardImageUrlKey">IMAGE_URL</string>
</resources>
